// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Calendar MonthSelect should display correct label 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-picker-calendar dcloud-picker-calendar-full"
  >
    <div
      class="dcloud-picker-calendar-header"
    >
      <div
        class="dcloud-select dcloud-picker-calendar-year-select dcloud-select-single dcloud-select-show-arrow"
      >
        <div
          class="dcloud-select-selector"
        >
          <span
            class="dcloud-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="dcloud-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="dcloud-select-selection-item"
            title="2019"
          >
            2019
          </span>
        </div>
        <span
          aria-hidden="true"
          class="dcloud-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down dcloud-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="dcloud-select dcloud-picker-calendar-month-select dcloud-select-single dcloud-select-show-arrow"
      >
        <div
          class="dcloud-select-selector"
        >
          <span
            class="dcloud-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="dcloud-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="dcloud-select-selection-item"
            title="Jan"
          >
            Jan
          </span>
        </div>
        <span
          aria-hidden="true"
          class="dcloud-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down dcloud-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="dcloud-radio-group dcloud-radio-group-outline dcloud-picker-calendar-mode-switch"
      >
        <label
          class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
        >
          <span
            class="dcloud-radio-button dcloud-radio-button-checked"
          >
            <input
              checked=""
              class="dcloud-radio-button-input"
              type="radio"
              value="month"
            />
            <span
              class="dcloud-radio-button-inner"
            />
          </span>
          <span>
            Month
          </span>
        </label>
        <label
          class="dcloud-radio-button-wrapper"
        >
          <span
            class="dcloud-radio-button"
          >
            <input
              class="dcloud-radio-button-input"
              type="radio"
              value="year"
            />
            <span
              class="dcloud-radio-button-inner"
            />
          </span>
          <span>
            Year
          </span>
        </label>
      </div>
    </div>
    <div
      class="dcloud-picker-panel"
      tabindex="0"
    >
      <div
        class="dcloud-picker-date-panel"
      >
        <div
          class="dcloud-picker-body"
        >
          <table
            class="dcloud-picker-content"
          >
            <thead>
              <tr>
                <th>
                  Su
                </th>
                <th>
                  Mo
                </th>
                <th>
                  Tu
                </th>
                <th>
                  We
                </th>
                <th>
                  Th
                </th>
                <th>
                  Fr
                </th>
                <th>
                  Sa
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="dcloud-picker-cell"
                  title="2018-12-30"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      30
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-end"
                  title="2018-12-31"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      31
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-start dcloud-picker-cell-in-view dcloud-picker-cell-selected"
                  title="2019-01-01"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      01
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-02"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      02
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-03"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      03
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-04"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      04
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-05"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      05
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-06"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      06
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-07"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      07
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-08"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      08
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-09"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      09
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-10"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      10
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-11"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      11
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-12"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      12
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-13"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      13
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-14"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      14
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-15"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      15
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-16"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      16
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-17"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      17
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-18"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      18
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-19"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      19
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-20"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      20
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-21"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      21
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-22"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      22
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-23"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      23
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-24"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      24
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-25"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      25
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-26"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      26
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-27"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      27
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-28"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      28
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-29"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      29
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2019-01-30"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      30
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-end dcloud-picker-cell-in-view"
                  title="2019-01-31"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      31
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-start"
                  title="2019-02-01"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      01
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-02"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      02
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-03"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      03
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-04"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      04
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-05"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      05
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-06"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      06
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-07"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      07
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-08"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      08
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2019-02-09"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      09
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Calendar Calendar should support locale 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-picker-calendar dcloud-picker-calendar-full"
  >
    <div
      class="dcloud-picker-calendar-header"
    >
      <div
        class="dcloud-select dcloud-picker-calendar-year-select dcloud-select-single dcloud-select-show-arrow"
      >
        <div
          class="dcloud-select-selector"
        >
          <span
            class="dcloud-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="dcloud-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="dcloud-select-selection-item"
            title="2018年"
          >
            2018年
          </span>
        </div>
        <span
          aria-hidden="true"
          class="dcloud-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down dcloud-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="dcloud-select dcloud-picker-calendar-month-select dcloud-select-single dcloud-select-show-arrow"
      >
        <div
          class="dcloud-select-selector"
        >
          <span
            class="dcloud-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="dcloud-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="dcloud-select-selection-item"
            title="10月"
          >
            10月
          </span>
        </div>
        <span
          aria-hidden="true"
          class="dcloud-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down dcloud-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="dcloud-radio-group dcloud-radio-group-outline dcloud-picker-calendar-mode-switch"
      >
        <label
          class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked"
        >
          <span
            class="dcloud-radio-button dcloud-radio-button-checked"
          >
            <input
              checked=""
              class="dcloud-radio-button-input"
              type="radio"
              value="month"
            />
            <span
              class="dcloud-radio-button-inner"
            />
          </span>
          <span>
            月
          </span>
        </label>
        <label
          class="dcloud-radio-button-wrapper"
        >
          <span
            class="dcloud-radio-button"
          >
            <input
              class="dcloud-radio-button-input"
              type="radio"
              value="year"
            />
            <span
              class="dcloud-radio-button-inner"
            />
          </span>
          <span>
            年
          </span>
        </label>
      </div>
    </div>
    <div
      class="dcloud-picker-panel"
      tabindex="0"
    >
      <div
        class="dcloud-picker-date-panel"
      >
        <div
          class="dcloud-picker-body"
        >
          <table
            class="dcloud-picker-content"
          >
            <thead>
              <tr>
                <th>
                  一
                </th>
                <th>
                  二
                </th>
                <th>
                  三
                </th>
                <th>
                  四
                </th>
                <th>
                  五
                </th>
                <th>
                  六
                </th>
                <th>
                  日
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-start dcloud-picker-cell-in-view"
                  title="2018-10-01"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      01
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-02"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      02
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-03"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      03
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-04"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      04
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-05"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      05
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-06"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      06
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-07"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      07
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-08"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      08
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-09"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      09
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-10"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      10
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-11"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      11
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-12"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      12
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-13"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      13
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-14"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      14
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-15"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      15
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-16"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      16
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-17"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      17
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-18"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      18
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view dcloud-picker-cell-today dcloud-picker-cell-selected"
                  title="2018-10-19"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date dcloud-picker-calendar-date-today"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      19
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-20"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      20
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-21"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      21
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-22"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      22
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-23"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      23
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-24"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      24
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-25"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      25
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-26"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      26
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-27"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      27
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-28"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      28
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-29"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      29
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2018-10-30"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      30
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-end dcloud-picker-cell-in-view"
                  title="2018-10-31"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      31
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-start"
                  title="2018-11-01"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      01
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-02"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      02
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-03"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      03
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-04"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      04
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-05"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      05
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-06"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      06
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-07"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      07
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-08"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      08
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-09"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      09
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-10"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      10
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2018-11-11"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      11
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Calendar rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-picker-calendar dcloud-picker-calendar-full dcloud-picker-calendar-rtl"
  >
    <div
      class="dcloud-picker-calendar-header"
    >
      <div
        class="dcloud-select dcloud-select-rtl dcloud-picker-calendar-year-select dcloud-select-single dcloud-select-show-arrow"
      >
        <div
          class="dcloud-select-selector"
        >
          <span
            class="dcloud-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="dcloud-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="dcloud-select-selection-item"
            title="2000"
          >
            2000
          </span>
        </div>
        <span
          aria-hidden="true"
          class="dcloud-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down dcloud-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="dcloud-select dcloud-select-rtl dcloud-picker-calendar-month-select dcloud-select-single dcloud-select-show-arrow"
      >
        <div
          class="dcloud-select-selector"
        >
          <span
            class="dcloud-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="dcloud-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="dcloud-select-selection-item"
            title="Sep"
          >
            Sep
          </span>
        </div>
        <span
          aria-hidden="true"
          class="dcloud-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down dcloud-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="dcloud-radio-group dcloud-radio-group-outline dcloud-radio-group-rtl dcloud-picker-calendar-mode-switch"
      >
        <label
          class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-checked dcloud-radio-button-wrapper-rtl"
        >
          <span
            class="dcloud-radio-button dcloud-radio-button-checked"
          >
            <input
              checked=""
              class="dcloud-radio-button-input"
              type="radio"
              value="month"
            />
            <span
              class="dcloud-radio-button-inner"
            />
          </span>
          <span>
            Month
          </span>
        </label>
        <label
          class="dcloud-radio-button-wrapper dcloud-radio-button-wrapper-rtl"
        >
          <span
            class="dcloud-radio-button"
          >
            <input
              class="dcloud-radio-button-input"
              type="radio"
              value="year"
            />
            <span
              class="dcloud-radio-button-inner"
            />
          </span>
          <span>
            Year
          </span>
        </label>
      </div>
    </div>
    <div
      class="dcloud-picker-panel"
      tabindex="0"
    >
      <div
        class="dcloud-picker-date-panel"
      >
        <div
          class="dcloud-picker-body"
        >
          <table
            class="dcloud-picker-content"
          >
            <thead>
              <tr>
                <th>
                  Su
                </th>
                <th>
                  Mo
                </th>
                <th>
                  Tu
                </th>
                <th>
                  We
                </th>
                <th>
                  Th
                </th>
                <th>
                  Fr
                </th>
                <th>
                  Sa
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="dcloud-picker-cell"
                  title="2000-08-27"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      27
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-08-28"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      28
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-08-29"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      29
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-08-30"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      30
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-end"
                  title="2000-08-31"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      31
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-start dcloud-picker-cell-in-view"
                  title="2000-09-01"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      01
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-02"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      02
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-03"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      03
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-04"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      04
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-05"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      05
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-06"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      06
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-07"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      07
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-08"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      08
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-09"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      09
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-10"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      10
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-11"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      11
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-12"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      12
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-13"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      13
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-14"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      14
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-15"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      15
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-16"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      16
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-17"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      17
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-18"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      18
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-19"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      19
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-20"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      20
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-21"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      21
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-22"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      22
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-23"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      23
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-24"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      24
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-25"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      25
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-26"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      26
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-27"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      27
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view dcloud-picker-cell-today dcloud-picker-cell-selected"
                  title="2000-09-28"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date dcloud-picker-calendar-date-today"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      28
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-in-view"
                  title="2000-09-29"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      29
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-end dcloud-picker-cell-in-view"
                  title="2000-09-30"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      30
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="dcloud-picker-cell dcloud-picker-cell-start"
                  title="2000-10-01"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      01
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-10-02"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      02
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-10-03"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      03
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-10-04"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      04
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-10-05"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      05
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-10-06"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      06
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
                <td
                  class="dcloud-picker-cell"
                  title="2000-10-07"
                >
                  <div
                    class="dcloud-picker-cell-inner dcloud-picker-calendar-date"
                  >
                    <div
                      class="dcloud-picker-calendar-date-value"
                    >
                      07
                    </div>
                    <div
                      class="dcloud-picker-calendar-date-content"
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
